# SpecDecode

./: README.md  accelerate_config.yaml  pyproject.toml  requirements.txt
configs/: base.yaml  benchmark.yaml  benchmark_profile.yaml  distill_code.yaml  eval_full.yaml  eval_quick.yaml  eval_routed.yaml  router_collect.yaml  router_train.yaml  train_chat.yaml  train_code.yaml  train_reasoning.yaml
demo/: app.py
docs/: model_card_template.md
scripts/: analyze_results.py  bench_compiled.py  bench_optimized.py  collect_router_data.py  compare_results.py  eval_routed.py  eval_trained_draft.py  profile_decoding.py  run_baseline.py  run_benchmark.py  run_speculative.py  test_configs.py  train_draft.py  train_router.py  upload_to_hub.py
src/: cli.py
src/draft_models/: __init__.py  data.py  distiller.py  metrics.py  trainer.py
src/evaluation/: __init__.py  analysis.py  benchmark.py  datasets.py  evaluator.py  quality.py  results.py  visualization.py
src/routing/: __init__.py  data_collection.py  features.py  model.py  router.py  trainer.py
src/speculative/: __init__.py  backends.py  decoding.py  kv_cache.py  rejection_sampling.py
src/utils/: __init__.py  config.py  logging.py  metrics.py  timing.py
tests/: test_backends.py  test_benchmark.py  test_cli.py  test_config.py  test_config_phase2.py  test_data.py  test_decoding.py  test_distiller.py  test_kv_cache.py  test_rejection_sampling.py  test_router.py  test_trainer.py
