[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specdecode"
version = "0.1.0"
description = "Production speculative decoding system for 2-3x LLM inference speedup"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.35",
    "accelerate",
    "datasets",
    "wandb",
    "pyyaml",
    "tqdm",
    "numpy",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
vllm = ["vllm"]
flash = ["flash-attn", "triton"]
dev = ["pytest", "pytest-timeout"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
